--- a/css/theme-blockbridge.css
+++ b/css/theme-blockbridge.css
@@ -36,8 +36,8 @@ footer {
 }
 
 .navbar-brand > svg.bb-logo {
-  max-width: 100%;
   max-height: 40px;
+  margin-top: 2px;
 }
 
 .summary {
@@ -45,10 +45,6 @@ footer {
     border-left: 5px solid #ED1951;
     font-size:16px;
 }
-
-
-h3 {color: #329def; }
-h4 {color: #808080; }
 
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
     background-color: #248ec2;
@@ -80,7 +76,7 @@ a[data-toggle="tooltip"] {
 }
 
 .navbar-inverse {
-  background-color: #0a0a0a;
+  background-color: #1f1f1f;
   border-width: 0;
   min-height: 65px;
 }
@@ -161,4 +157,52 @@ li.sidebarTitle {
 
 .navbar-inverse .navbar-toggle {
     border-color: #015CAE;
+}
+
+body {
+    color: #101010;
+    font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+b, strong {
+    font-family: 'Open Sans Bold', sans-serif;
+}
+
+blockquote {
+    font-size: 12px;
+}
+
+h1,
+h2,
+h3,
+h4 {
+    font-family: 'Lato', sans-serif;
+    -webkit-font-smoothing: antialiased;
+}
+
+h1 { margin-bottom: 25px; font-size: 30px; line-height: 30px; font-weight: bold;   color: #008eff; }
+h2 { margin-bottom: 25px; font-size: 26px; line-height: 30px; font-weight: bold;   color: #202020; }
+h3 { margin-bottom: 25px; font-size: 22px; line-height: 30px; font-weight: bold;   color: #329def; }
+h4 { margin-bottom: 25px; font-size: 20px; line-height: 30px; font-weight: normal; color: #808080; }
+
+hr {
+    background: linear-gradient(to right, #008eff 0%,#ffffff 86%);
+    height: 20px;
+    margin: 50px 0px 35px 0px;
+    width: 100%;
+    border: none;
+}
+
+pre {
+    background: #ebf5ff !important;
+    border: 1px solid #d4ecff;
+    padding: 17px 10px;
+    font-size: 12px;
+}
+
+.post-content .docimage {
+    margin: 10px 0px 20px 0px;
+    border: 1px solid #eaeaea;
+    border-radius: 8px;
 }
