--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,10 @@
 <meta name="description" content="{% if page.summary %}{{ page.summary | strip_html | strip_newlines | truncate: 160 }}{% endif %}">
 <meta name="keywords" content="{{page.tags}}{% if page.tags %}, {% endif %} {{page.keywords}}">
 <title>{{ page.title }} | {{ site.site_title }}</title>
+<!-- Google Fonts -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
+
 <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
 
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -30,7 +34,7 @@
 <script src="{{ "/js/toc.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/customscripts.js" | prepend: site.baseurl }}"></script>
 
-<link rel="shortcut icon" href="{{ "/images/favicon.ico" | prepend: site.baseurl }}">
+<link rel="shortcut icon" href="{{ "/imagesbb-favicon-32x32.png" | prepend: site.baseurl }}" type="image/png">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
