--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -11,16 +11,17 @@
   position: sticky;
   top: 60px;
   height: calc(100vh - 60px);
-  padding: 20px 10px 20px 10px;
-  background-color: #f3f3f3;
-  color: #33444C;
-  max-width: 325px;
+  padding: 0px 10px 20px 10px;
+  background-color: #008eff;
+  color: #000;
+  max-width: 400px;
   overflow-y: scroll;
 }
 
 .col-content {
   flex: 1 1;
-  padding: 80px 30px 20px 30px;
+  padding: 55px 25px 20px 25px;
+  max-width: 970px;
 }
 
 /* navgoco sidebar styles (customized) */
@@ -38,20 +39,37 @@
   margin: 0px;
 }
 
-.sidebar > li {
-  margin: 1px 0;
-}
-
-.sidebar > li li {
-  margin: 2px 0;
-}
-
 .sidebar a {
-  color: #0090C8;
+  color: #ffffff;
   display: block;
   outline: none;
   text-decoration: none;
   padding: 10px 15px;
+  -webkit-font-smoothing: antialiased;
+}
+
+/* Level 1 */
+.sidebar > li {
+  margin: 15px 0;
+}
+
+.sidebar li > a {
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 10px;
+  font-weight: bold;
+}
+
+/* Level 2  */
+.sidebar > li li {
+  margin: 2px 0;
+}
+
+.sidebar li > ul > li > a {
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 20px;
+  font-weight: normal;
 }
 
 .sidebar li > a > span {
@@ -59,7 +77,6 @@
     font-size: 19px;
     font-weight: bolder;
 }
-
 
 .sidebar li > a > span:after {
     content: '\25be';
