--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -14,14 +14,15 @@
   padding: 0px 10px 20px 10px;
   background-color: #008eff;
   color: #000;
-  max-width: 400px;
+  max-width: 380px;
   overflow-y: scroll;
 }
 
 .col-content {
   flex: 1 1;
-  padding: 55px 25px 20px 25px;
-  max-width: 970px;
+  padding: 55px 20px 20px 20px;
+  max-width: 900px;
+  min-width: 670px;
 }
 
 /* navgoco sidebar styles (customized) */
