--- a/css/theme-blockbridge.css
+++ b/css/theme-blockbridge.css
@@ -46,6 +46,10 @@ footer {
     font-size:16px;
 }
 
+.post-title-main {
+    text-transform: uppercase;
+ }
+
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
     background-color: #248ec2;
     color: white;
