--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,7 +34,7 @@
 <script src="{{ "/js/toc.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/customscripts.js" | prepend: site.baseurl }}"></script>
 
-<link rel="shortcut icon" href="{{ "/imagesbb-favicon-32x32.png" | prepend: site.baseurl }}" type="image/png">
+<link rel="shortcut icon" href="{{ "/images/bb-favicon.ico" | prepend: site.baseurl }}" type="image/png">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
