--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <div class="navbar-brand">{% svg /images/bb-svg-logo.svg class="bb-logo" width=310 %}</div>
+            <div class="navbar-brand">{% svg /images/bb-svg-logo.svg class="bb-logo" width="100%" %}</div>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
