--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,15 +9,14 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
 
 <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
-
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<!--<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">-->
-<link rel="stylesheet" href="{{ "/css/modern-business.css" | prepend: site.baseurl }}">
+
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/css/customstyles.css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ "/css/navbar.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/css/sidebar.css" | prepend: site.baseurl }}">
-<link rel="stylesheet" href="{{ "/css/boxshadowproperties.css" | prepend: site.baseurl }}">
 <!-- most color styles are extracted out to here -->
 <link rel="stylesheet" href="{{ "/css/theme-blockbridge.css" | prepend: site.baseurl }}">
 
