--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -131,7 +131,7 @@ th {
 table {
     max-width: 90%;
     margin-bottom: 20px;
-    border: 1px solid #dedede;
+    background-color: #333333
 }
 
 table > thead > tr > th,
@@ -143,13 +143,12 @@ table > tfoot > tr > td {
     padding: 8px;
     line-height: 1.42857143;
     vertical-align: top;
-    border-top: 1px solid #ddd;
+    border-top: 1px solid #464646;
 }
 table > thead > tr > th {
     vertical-align: bottom;
-    border-bottom: 2px solid #ddd;
     text-transform: none;
-    background-color: #777;
+    background-color: #008eff;
     color: white;
     text-align: left;
 }
@@ -163,7 +162,7 @@ table > thead:first-child > tr:first-child > td {
 }
 
 table > tbody > tr:nth-of-type(odd) {
-    background-color: #f9f9f9;
+    background-color: rgba(0,0,0,.5);
 }
 
 table col[class*="col-"] {
@@ -550,10 +549,10 @@ hr.faded {
 }
 
 hr.shaded {
-    height: 12px;
+    height: 10px;
     border: 0;
     margin-top: 70px;
-    background: white;
+    background: #008eff;
     width: 100%;
     margin-bottom: 10px;
 }
