--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,12 +1,41 @@
-.summary {
-    color: #808080;
-    border-left: 5px solid #ED1951;
-    font-size:16px;
+.navbar > .container {
+  margin-left: 20px !important;
+  margin-right: 20px !important;
 }
 
+.navbar-toggle {
+  margin-top: 15px !important;
+}
 
-h3 {color: #329def; }
-h4 {color: #808080; }
+.nav > li > a {
+  padding-top: 8px !important;
+  padding-bottom: 8px !important;
+}
+
+.nav > li {
+  margin: 2px 0 !important;
+}
+
+.navbar-brand {
+  height: 55px !important;
+}
+
+.navbar-brand {
+  min-height: 40px;
+}
+
+@media (max-width: 400px) {
+  .navbar-brand {
+    max-width: 80% !important;
+  }
+  .navbar-brand > svg.bb-logo {
+        margin-top: 2px !important;
+  }
+}
+
+.navbar-brand > svg.bb-logo {
+  max-height: 40px;
+}
 
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
     background-color: #248ec2;
@@ -38,9 +67,11 @@ a[data-toggle="tooltip"] {
 }
 
 .navbar-inverse {
-    background-color: #347DBE;
-    border-color: #015CAE;
+  background: linear-gradient(to right, #101010 0%,#202020 86%);
+  border-bottom: 1px solid #292929;
+  min-height: 65px;
 }
+
 .navbar-inverse .navbar-nav>li>a, .navbar-inverse .navbar-brand {
     color: white;
 }
@@ -66,56 +97,14 @@ a.navbar-brand:hover {
     border-color: #248ec2 !important;
 }
 
-.btn-primary {
-    color: #ffffff;
-    background-color: #347DBE;
-    border-color: #347DBE;
-}
-
-.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
-    background-color: #347DBE;
-}
-
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary:active,
-.btn-primary.active,
-.open .dropdown-toggle.btn-primary {
-    background-color: #248ec2;
-    border-color: #347DBE;
-}
-
-.printTitle {
-    color: #015CAE !important;
-}
-
-body.print h1 {color: #015CAE !important; font-size:28px !important;}
-body.print h2 {color: #595959 !important; font-size:20px !important;}
-body.print h3 {color: #E50E51 !important; font-size:14px !important;}
-body.print h4 {color: #679DCE !important; font-size:14px; font-style: italic !important;}
-
-.anchorjs-link:hover {
-    color: #216f9b;
-}
-
-div.sidebarTitle {
-    color: #015CAE;
-}
-
-li.sidebarTitle {
-  margin-top:20px;
-    font-weight:normal;
-    font-size:130%;
-    color: #ED1951;
-    margin-bottom:10px;
-    margin-left: 5px;
-
-}
-
 .navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
     background-color: #015CAE;
 }
 
 .navbar-inverse .navbar-toggle {
     border-color: #015CAE;
+}
+
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
+    background-color: #347DBE;
 }
