--- a/css/theme-blockbridge.css
+++ b/css/theme-blockbridge.css
@@ -3,46 +3,6 @@ footer {
   margin: 0 0 !important;
 }
 
-.navbar > .container {
-  margin-left: 20px !important;
-  margin-right: 20px !important;
-}
-
-.navbar-toggle {
-  margin-top: 15px !important;
-}
-
-.nav > li > a {
-  padding-top: 8px !important;
-  padding-bottom: 8px !important;
-}
-
-.nav > li {
-  margin: 2px 0 !important;
-}
-
-.navbar-brand {
-  height: 55px !important;
-}
-
-.navbar-brand {
-  min-height: 40px;
-}
-
-@media (max-width: 400px) {
-  .navbar-brand {
-    max-width: 80% !important;
-  }
-  .navbar-brand > svg.bb-logo {
-        margin-top: 4px !important;
-  }
-}
-
-.navbar-brand > svg.bb-logo {
-  max-height: 40px;
-  margin-top: 2px;
-}
-
 .summary {
     color: #808080;
     border-left: 5px solid #ED1951;
@@ -53,63 +13,10 @@ footer {
     text-transform: uppercase;
  }
 
-.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
-    background-color: #248ec2;
-    color: white;
-}
-
-.nav > li.active > a {
-    background-color: #347DBE;
-}
-
-.nav > li > a:hover {
-    background-color: #248ec2;
-}
-
-div.navbar-collapse .dropdown-menu > li > a:hover {
-    background-color: #347DBE;
-}
-
-.nav li.thirdlevel > a {
-    background-color: #FAFAFA !important;
-    color: #248EC2;
-    font-weight: bold;
-}
-
 a[data-toggle="tooltip"] {
     color: #649345;
     font-style: italic;
     cursor: default;
-}
-
-.navbar-inverse {
-  background-color: #1f1f1f;
-  border-width: 0;
-  min-height: 65px;
-}
-.navbar-inverse .navbar-nav>li>a, .navbar-inverse .navbar-brand {
-    color: white;
-}
-
-.navbar-inverse .navbar-nav>li>a:hover, a.fa.fa-home.fa-lg.navbar-brand:hover {
-     color: #f0f0f0;
-}
-
-a.navbar-brand:hover {
-  color: #f0f0f0;
-}
-
-.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
-    color: #015CAE;
-}
-
-.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
-    background-color: #015CAE;
-    color: #ffffff;
-}
-
-.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
-    border-color: #248ec2 !important;
 }
 
 .btn-primary {
@@ -118,9 +25,6 @@ a.navbar-brand:hover {
     border-color: #347DBE;
 }
 
-.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
-    background-color: #347DBE;
-}
 
 .btn-primary:hover,
 .btn-primary:focus,
@@ -135,10 +39,10 @@ a.navbar-brand:hover {
     color: #015CAE !important;
 }
 
-body.print h1 {color: #015CAE !important; font-size:28px !important;}
-body.print h2 {color: #595959 !important; font-size:20px !important;}
-body.print h3 {color: #E50E51 !important; font-size:14px !important;}
-body.print h4 {color: #679DCE !important; font-size:14px; font-style: italic !important;}
+body.print h1 {color: #FFF !important; font-size:28px !important;}
+body.print h2 {color: #FFF !important; font-size:20px !important;}
+body.print h3 {color: #FFF !important; font-size:14px !important;}
+body.print h4 {color: #FFF !important; font-size:14px; font-style: italic !important;}
 
 .anchorjs-link:hover {
     color: #216f9b;
@@ -156,14 +60,6 @@ li.sidebarTitle {
     margin-bottom:10px;
     margin-left: 5px;
 
-}
-
-.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
-    background-color: #015CAE;
-}
-
-.navbar-inverse .navbar-toggle {
-    border-color: #015CAE;
 }
 
 body {
@@ -188,28 +84,50 @@ h4 {
     -webkit-font-smoothing: antialiased;
 }
 
-h1 { margin-bottom: 25px; font-size: 30px; line-height: 30px; font-weight: bold;   color: #008eff; }
-h2 { margin-bottom: 25px; font-size: 26px; line-height: 30px; font-weight: bold;   color: #202020; }
-h3 { margin-bottom: 25px; font-size: 22px; line-height: 30px; font-weight: bold;   color: #329def; }
-h4 { margin-bottom: 25px; font-size: 20px; line-height: 30px; font-weight: normal; color: #808080; }
+body {  color: #d4d4d4; -webkit-font-smoothing: antialiased; }
+p  { color: #d4d4d4; -webkit-font-smoothing: antialiased; }
+h1 { margin-bottom: 25px; font-size: 29px; line-height: 30px; font-weight: bold;   color: #d4d4d4; }
+h2 { margin-bottom: 25px; font-size: 26px; line-height: 30px; font-weight: bold;   color: #d4d4d4; }
+h3 { margin-bottom: 25px; font-size: 22px; line-height: 30px; font-weight: bold;   color: #d4d4d4; }
+h4 { margin-bottom: 25px; font-size: 20px; line-height: 30px; font-weight: normal; color: #d4d4d4; }
 
 hr {
-    background: linear-gradient(to right, #008eff 0%,#ffffff 86%);
-    height: 20px;
-    margin: 50px 0px 35px 0px;
+    background: linear-gradient(to left, #212121 0%,#444444 86%);
+    height: 1px;
+    margin: 35px 0px 30px 0px;
     width: 100%;
     border: none;
 }
 
-pre {
-    background: #ebf5ff !important;
-    border: 1px solid #d4ecff;
-    padding: 17px 10px;
-    font-size: 12px;
+@media screen {
+    pre {
+      background: #131313 !important;
+      color: #c5e5ff;
+      border: none;
+      padding: 17px 10px;
+      font-size: 12px;
+    }
 }
 
 .post-content .docimage {
     margin: 10px 0px 20px 0px;
-    border: 1px solid #eaeaea;
+    border-radius: 5px;
     border-radius: 8px;
+}
+
+.highlight {
+    background-color: rgba(0,0,0,0);
+ }
+
+.alert {
+    border: none !important;
+    color: #fff;
+ }
+.alert-success {
+    background-color: #2c465a;
+ }
+
+code {
+    color: #ff5400;
+    background-color: #303030;
 }
